# valhalla

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.py
docs/: README.md
tools/: manage.ps1
valhalla/: __init__.py  __main__.py  abstract_node.py  app.py  default_node.py  errors.py  main_window.py  node_properties.py  port.py  utils.py  version.py
valhalla/nodes/: abstract_node.py  conversion.py  default_node.py  default_node_widget.py  node.py  scalar.py  test_node.py  values.py
valhalla/resources/: node.psd
valhalla/types/: execution.xml  float.xml  int.xml
