[tool.poetry]
name = "valhalla"
version = "0.1.0"
description = ""
authors = ["Ondrej Samohel <ondrej.samohel@ynput.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
NodeGraphQt = { git = "https://github.com/rajkundu/NodeGraphQt.git" }
autoprop = "^4.1.0"
qtpy = "^2.4.1"
pyside6 = "^6.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0"
autopep8 = "^2.0"
coverage = "*"
pylint = "^2.4.4"
pytest = "^6.1"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
